test/fail_compilation/diag6743.d
/*
REQUIRED_ARGS: -run test.exe
TEST_OUTPUT:
---
Error: -run must be followed by a source file, not 'test.exe'
       run `dmd` to print the compiler manual
       run `dmd -man` to open browser on manual
---
*/

